--- a/templates/index.html
+++ b/templates/index.html
@@ -56,11 +56,6 @@
   </style>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg mb-4">
-  <div class="container">
-    <a class="navbar-brand" href="#">ATS CV Checker</a>
-  </div>
-</nav>
 
 <div class="container py-4">
   <h1 class="heading-animate mb-4 text-center">Professional ATS CV Checker</h1>
@@ -121,7 +116,7 @@
 <footer class="footer-credit">
   <div class="container">
     <strong>Md Sydul Amin</strong> &mdash; Sr. Software Engineer (Creative Business Group)<br>
-    All credits reserved &copy; {{ now().year }}
+    All credits reserved &copy; 2025
   </div>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
